[package]
name = "atocont"
version = "1.0.7"
description = "校园网自动登录工具"
authors = ["yxxawa"]
edition = "2021"

[lib]
name = "campus_net_login_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "time"] }
chrono = "0.4"
local-ip-address = "0.6"
auto-launch = "0.5"
dirs = "5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "synchapi", "handleapi", "winbase"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
